@@ -80,6 +80,7 @@ gboolean hd_home_view_get_active (HdHomeView *view);
 void     hd_home_view_set_active (HdHomeView *view,
                                   gboolean    active);
 void hd_home_view_load_background (HdHomeView *view);
+void hd_home_view_update_state (HdHomeView *view);
 
 G_END_DECLS
 
