@@ -72,9 +72,6 @@ void hd_home_add_status_menu (HdHome *home, ClutterActor *sa);
 void hd_home_remove_status_area (HdHome *home, ClutterActor *sa);
 void hd_home_remove_status_menu (HdHome *home, ClutterActor *sa);
 
-void hd_home_show_applet_buttons (HdHome *home, ClutterActor *applet);
-void hd_home_hide_applet_buttons (HdHome *home);
-
 void hd_home_close_applet (HdHome *home, ClutterActor *applet);
 
 guint hd_home_get_current_view_id (HdHome *home);
