@@ -134,6 +134,9 @@ typedef enum
 #define STATE_HOME_FRONT(s) \
   (STATE_ONE_OF((s), HDRM_STATE_HOME_EDIT))
 
+#define STATE_IN_EDIT_MODE(s) \
+  (STATE_ONE_OF((s), HDRM_STATE_HOME_EDIT | HDRM_STATE_HOME_EDIT_DLG))
+
 /* Whether to update part of the screen or not.
  * HDRM_STATE_TASK_NAV : Apps are scaled, and scroller is a nightmare
  *                       to deal with.
